--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hominify",
   "version": "1.0.0",
-  "description": "Hominify Müzik Uygulaması",
+  "description": "Hominify - Ücretsiz Müzik Uygulaması (Spotify + YouTube)",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -12,6 +12,9 @@
     "dotenv": "^16.0.3",
     "electron": "^22.0.0",
     "electron-is-dev": "^2.0.0",
-    "ytdl-core": "^4.11.0"
+    "ffmpeg-static": "^5.3.0",
+    "yt-dlp-exec": "^1.0.2",
+    "ytdl-core": "^4.8.3",
+    "ytsr": "^3.8.4"
   }
 }
